--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.+'
 }
