--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.+'
+    testImplementation 'org.assertj:assertj-core:3.18.1'
 }
